fix main search size on mobile

--- a/src/components/Search.css
+++ b/src/components/Search.css
@@ -21,3 +21,11 @@
   flex-direction: column;
   width: 45vw;
 }
+
+@media screen and (max-width: 37.5em) {
+  .Search-main {
+    width: 100vw;
+    padding: 0 14px;
+    box-sizing: border-box;
+  }
+}
